--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,4 @@
-<h2>Welcome to Policy Genius</h2>
+<h3>Welcome to Policy Genius</h3>
 <p>Life Insurance Pricing Estimator for TICKLE</p>
+
+<%= link_to "Get Estimate", new_estimate_path, class: 'btn btn-primary' %>
