--- a/app/views/estimates/new.html.erb
+++ b/app/views/estimates/new.html.erb
@@ -1,4 +1,4 @@
-<h1>New Estimate</h1>
+<h2>New Estimate</h2>
 
 <div class="row">
    <div class="col-md-4">
@@ -6,20 +6,28 @@
        <%= fields_for @person do |p| %>
          <div class="form-group">
            <%= p.label :name %>
-           <%= p.text_field :first_name, class: 'form-control', placeholder: "Enter first name" %>
+           <%= p.text_field :first_name, class: 'form-control', placeholder: "Enter first name", :required => true %>
          </end>
          <div class="form-group">
            <%= p.label :age %>
-           <%= p.text_field :age, class: 'form-control', placeholder: "Enter age" %>
+           <%= p.text_field :age, class: 'form-control', placeholder: "Enter age", :required => true %>
          </end>
          <div class="form-group">
            <%= p.label :gender %>
            <%= p.select(:gender, Person::GENDER_TYPES, {}, {:class => 'form-control'}) %>
          </end>
          <div class="form-group">
-           <%= p.label :cities %>
+           <%= p.label :city %>
            <%= p.select :location, Location.all.collect { |p| [ p.city, p.id ] }, {}, class: "form-control" %>
          </end>
+         <div class="row">
+          <%= fields_for(@person_health) do |ph| %>
+            <div class="col-md-4">
+              <%= ph.label "Health Conditions" %><br/>
+              <%= ph.select(:condition, Estimate.health_keys, {}, {:multiple => true, :size => 8 }) %>
+            </div>
+          <% end %>
+         </div>
        <% end %>
        <div class="row">
         </br>
